# Lab-info-2

./: README.md
Desafio1/: Informe desafío uno.docx  Informe desafío uno_f.docx  Informe final  código desafio 1.txt
Desafio2/desafio2/: main.cpp
ejercicio1/: CMakeLists.txt  main.cpp
ejercicio3/: CMakeLists.txt  main.cpp
lab01/: CMakeLists.txt
lab01/ejercicio1/: main.cpp
lab01/ejercicio10/: CMakeLists.txt  main.cpp
lab01/ejercicio11/: CMakeLists.txt  main.cpp
lab01/ejercicio12/: CMakeLists.txt  main.cpp
lab01/ejercicio13/: CMakeLists.txt  main.cpp
lab01/ejercicio14/: CMakeLists.txt  main.cpp
lab01/ejercicio15/: CMakeLists.txt  main.cpp
lab01/ejercicio16/: CMakeLists.txt  main.cpp
lab01/ejercicio17/: CMakeLists.txt  main.cpp
lab01/ejercicio18/: CMakeLists.txt  main.cpp
lab01/ejercicio19/: CMakeLists.txt  main.cpp
lab01/ejercicio2/: main.cpp
lab01/ejercicio20/: CMakeLists.txt  main.cpp
lab01/ejercicio21/: CMakeLists.txt  main.cpp
lab01/ejercicio22/: CMakeLists.txt  main.cpp
lab01/ejercicio23/: CMakeLists.txt  main.cpp
lab01/ejercicio24/: CMakeLists.txt  main.cpp
lab01/ejercicio25/: CMakeLists.txt  main.cpp
lab01/ejercicio26/: CMakeLists.txt  main.cpp
lab01/ejercicio27/: CMakeLists.txt  main.cpp
lab01/ejercicio28/: CMakeLists.txt  main.cpp
lab01/ejercicio3/: CMakeLists.txt  main.cpp
lab01/ejercicio4/: CMakeLists.txt  main.cpp
lab01/ejercicio5/: CMakeLists.txt  main.cpp
lab01/ejercicio6/: CMakeLists.txt  main.cpp
lab01/ejercicio7/: CMakeLists.txt  main.cpp
lab01/ejercicio8/: CMakeLists.txt  main.cpp
lab01/ejercicio9/: CMakeLists.txt  main.cpp
lab01/problema1/: CMakeLists.txt  main.cpp
lab01/problema10/: CMakeLists.txt  main.cpp
lab01/problema11/: CMakeLists.txt  main.cpp
lab01/problema12/: CMakeLists.txt  main.cpp
lab01/problema13/: CMakeLists.txt  main.cpp
lab01/problema14/: CMakeLists.txt  main.cpp
lab01/problema15/: CMakeLists.txt  main.cpp
lab01/problema16/: main.cpp
lab01/problema2/: main.cpp
lab01/problema3/: CMakeLists.txt  main.cpp
lab01/problema4/: CMakeLists.txt  main.cpp
lab01/problema5/: CMakeLists.txt  main.cpp
lab01/problema6/: CMakeLists.txt  main.cpp
lab01/problema7/: CMakeLists.txt  main.cpp
lab01/problema8/: CMakeLists.txt  main.cpp
lab01/problema9/: CMakeLists.txt  main.cpp
lab02/problema10/: main.cpp
lab02/problema12/: main.cpp
lab02/problema14/: main.cpp
lab02/problema16/: main.cpp
lab02/problema18/: main.cpp
lab02/problema2/: main.cpp
lab02/problema4/: main.cpp
lab02/problema6/: main.cpp
lab02/problema8/: main.cpp
lab03/: ejercicio2.txt
